State/Api connection

--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -231,6 +231,7 @@
     <Content Include="Web.config" />
     <Content Include="Views\Home\Questions.cshtml" />
     <Content Include="Views\Home\frontendtemp.cshtml" />
+    <Content Include="Views\Home\apiTest.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
