--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -187,6 +187,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>HowsLife.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>HowsLife.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\UserInput.cs">
       <DependentUpon>HowsLife.tt</DependentUpon>
     </Compile>
