--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -247,6 +247,7 @@
     <Content Include="Views\Home\apiTest.cshtml" />
     <Content Include="Views\Home\QuestionsTemp.cshtml" />
     <Content Include="Views\Home\TempOut.cshtml" />
+    <Content Include="Views\Home\NewState.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
