final changes part 1

--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -223,6 +223,7 @@
     <Content Include="Models\HowsLife.edmx.diagram">
       <DependentUpon>HowsLife.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\FinalProject20180919030134 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
